--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -4,20 +4,12 @@
   <meta charset="utf-8">
   <script src="https://github.com/XNaAlOH4/JS_Library/PhysicsEngine.js"></script>
   <!-- <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.min.js"></script> -->
-  <!-- <IfModule mod_setenvif.c>
-  <IfModule mod_headers.c>
-    <FilesMatch "\.(bmp|cur|gif|ico|jpe?g|png|svgz?|webp|avifs?)$"">
-      SetEnvIf Origin ":" IS_CORS
-      Header set Access-Control-Allow-Origin "*" env=IS_CORS
-    </FilesMatch>
-  </IfModule>
-</IfModule> -->
 <style>
-	head,body {
-	  padding:0;
-	  margin:0;
-	  border:0;
-	}
+  head,body {
+		padding:0;
+		margin:0;
+		border:0;
+  }
   canvas {
     padding:0;
     margin:0;
@@ -162,49 +154,48 @@
       }
 
       newCircle() {
-        // var rand = Math.floor(Math.random()*spots.length);
-        // var spot = spots[rand];
-        var rand = Math.random();
-        var x, y, color;
-        switch(true) {
-          case rand <= 0.1:
-            x = Math.random()*canvas.width/2+canvas.width/2;
-            y = Math.random()*canvas.height/10+canvas.height/1.5;
-            // color="rgb(200,200,145)"
-            break;
-          case rand < 0.3:
-            x = Math.random()*canvas.width/4;
-            y = Math.random()*canvas.height/1.4+canvas.height/8;
-            // color="rgb(160,196,210)"
-            break;
-          case rand < 0.5:
-            x = Math.random()*canvas.width/2+canvas.width/3;
-            y = Math.random()*canvas.height/2+canvas.width/5;
-            // color="rgb(200,250,205)"
-            break;
-          case rand <= 0.7:
-            x = Math.random()*canvas.width*0.9+canvas.width/10;
-            y = Math.random()*canvas.height*0.9+canvas.width/10;
-            // color="rgb(80,150,190)"
-            break;
-          case rand < 0.8:
-            x = Math.random()*canvas.width*0.9+canvas.width/10;
-            y = Math.random()*canvas.height*0.9+canvas.width/10;
-            // color="rgb(190,110,55)"
-            break;
-          default:
-            x = Math.random()*canvas.width;
-            y = Math.random()*canvas.height;
-            // color="#D0ADE0"
-            break;
-        }
+        var rand = Math.floor(Math.random()*spots.length);
+        var spot = spots[rand];
+//         var rand = Math.random();
+//         var x, y, color;
+//         switch(true) {
+//           case rand <= 0.1:
+//             x = Math.random()*canvas.width/2+canvas.width/2;
+//             y = Math.random()*canvas.height/10+canvas.height/1.5;
+//             // color="rgb(200,200,145)"
+//             break;
+//           case rand < 0.3:
+//             x = Math.random()*canvas.width/4;
+//             y = Math.random()*canvas.height/1.4+canvas.height/8;
+//             // color="rgb(160,196,210)"
+//             break;
+//           case rand < 0.5:
+//             x = Math.random()*canvas.width/2+canvas.width/3;
+//             y = Math.random()*canvas.height/2+canvas.width/5;
+//             // color="rgb(200,250,205)"
+//             break;
+//           case rand <= 0.7:
+//             x = Math.random()*canvas.width*0.9+canvas.width/10;
+//             y = Math.random()*canvas.height*0.9+canvas.width/10;
+//             // color="rgb(80,150,190)"
+//             break;
+//           case rand < 0.8:
+//             x = Math.random()*canvas.width*0.9+canvas.width/10;
+//             y = Math.random()*canvas.height*0.9+canvas.width/10;
+//             // color="rgb(190,110,55)"
+//             break;
+//           default:
+//             x = Math.random()*canvas.width;
+//             y = Math.random()*canvas.height;
+//             // color="#D0ADE0"
+//             break;
+//         }
         var valid = true;
         let temp = new Circle(x,y);
         // temp.color = color;
         let points = [];
         this.query(temp,points);
         for(let c of points) {
-        	// console.log(c)
           if(temp.pos.dist(c.pos) <= c.r) {
           	valid = false;
           	return 1;
@@ -244,44 +235,6 @@
       intersects(object) {
         if(object.r != null) {
           return !(object.pos.x - object.r > this.x + this.width || object.pos.x + object.r < this.x - this.width || object.pos.y - object.r > this.y + this.height || object.pos.y + object.r < this.y - this.height)
-          //find line intercepts of direction vector
-          //find direction vector
-          //then dtermine if intercepts lie in circle
-
-          // let dir = object.pos.copy().sub(center);
-          // let line = new Line(center, dir);
-          // let bl = new Vector(this.pos.x+this.width, this.pos.y + this.height);
-          // if(center.dist(object.pos) < this.width/2 || center.dist(object.pos) < this.height/2) {return true;}
-          // if(center.y > object.pos.y) {
-          //   var top = new Line(this.pos.copy(),new Vector(1));
-          //   if(center.x < object.pos.x) {
-          //     var right = new Line(this.pos.copy(),new Vector(0,1));
-          //     var second = line.intersect(right);
-          //   }else {
-          //     var left = new Line(bl, new Vector(0,1));
-          //     var second = line.intersect(left);
-          //   }
-          //   var first = line.intersect(top);
-          //   if(this.pos.dist(object.pos) < this.pos.dist(first)){return true;}
-          //   // console.log(second);
-          //   if(first.dist(object.pos) < object.r || second.dist(object.pos) < object.r) {return true}
-          //   return false;
-          // }else {
-          //   var bottom = new Line(bl,new Vector(1,0));
-          //   if(center.x < object.pos.x) {
-          //     var right = new Line(this.pos.copy(),new Vector(0,1));
-          //     var second = line.intersect(right);
-          //   }else {
-          //     var left = new Line(bl, new Vector(0,1));
-          //     var second = line.intersect(left);
-          //   }
-          //   var first = line.intersect(bottom);
-          //   if(this.pos.dist(object.pos) < this.pos.dist(first)){
-          //   	return true;
-          //   }
-          //   if(first.dist(object.pos) < object.r || second.dist(object.pos) < object.r) {return true}
-          //   return false;
-          // }
         }
         // return (object.pos.x - object.width > this.pos.x + this.width && 
         //         object.pos.y - object.height < this.pos.y + this.height) || (object.pos.x + object.width < this.pos.x - this.width && 
@@ -290,25 +243,32 @@
     }
 
     function brightness (color) {
-      var color = "" + color, isHEX = color.indexOf("#") == 0, isRGB = color.indexOf("rgb") == 0;
-      if (isHEX) {
-        var m = color.substr(1).match(color.length == 7 ? /(\S{2})/g : /(\S{1})/g);
-        if (m) var r = parseInt(m[0], 16), g = parseInt(m[1], 16), b = parseInt(m[2], 16);
-      }
-      if (isRGB) {
-        var m = color.match(/(\d+){3},/g);
-        for(let i of color.match(/{\d+}{3})/g)){m.push(i);}
-        var m1 = color.match(/(\d+){2},/g);
-        for(let i of color.match(/{\d+}{2})/g)){m1.push(i);}
-        var m2 = color.match(/(\d+){1},/g);
-        for(let i of color.match(/{\d+}{1})/g)){m2.push(i);}
-        console.log(m,m1,m2)
+      //num,num,num,num
+      //All RGB vals are before commas
+      var color = ""+color;
+      var m = color.match(/(\d+){3}/g);
+      var m1 = color.match(/(\d+){2}/g);
+      var m2 = color.match(/(\d+){1}/g);
 
-        if (m||m1||m2) var r = m[0]||m1[0]||m2[0], g = m[1]||m1[1]||m2[1], b = m[2]||m1[2]||m2[2];
+      switch(true) {
+      	case m:
+      	  var r = m[0]||m1[0]||m2[0], g = m[1]||m1[1]||m2[1], b = m[2]||m1[2]||m2[2];
+      	  break;
+      	case m1:
+      	  var r = m1[0]||m2[0], g = m1[1]||m2[1], b = m1[2]||m2[2];
+      	  break;
+      	default:
+      	  var r = m2[0], g = m2[1], b = m2[2];
+      	  break;
       }
-      if (typeof r != "undefined") {
-        return ((r*299)+(g*587)+(b*114))/1000;
-      }else {return null;}
+      switch(r) {
+      	case null:
+      	  return 0;
+      	case undefined:
+      	  return 0;
+      	default:
+      	  return ((r*299)+(g*587)+(b*114))/1000;
+      }
     }
 
     function setup() {
@@ -318,17 +278,16 @@
       ctx.font = "400px sans-serif"
       ctx.textAlign = "center";
       ctx.fillText("2020", canvas.width/2, canvas.height/2+125)
-      // for(let x = 0; x < canvas.width; x++) {
-      //   for(let y = 0; y < canvas.height; y++) {
-      //     var index = x + y * canvas.width;
-      //     var c = ctx.getImageData(x,y,1,1);
-      //     var b = brightness(c);
-      //     if(b > 1) {
-      //       spots.push(new Vector(x,y))
-      //     }
-      //   }
-      // }
-      // ctx.drawImage(img,0,0);
+      for(let x = 0; x < canvas.width; x++) {
+        for(let y = 0; y < canvas.height; y++) {
+          var index = x + y * canvas.width;
+          var c = ctx.getImageData(x,y,1,1);
+          var b = brightness(c);
+          if(b > 1) {
+            spots.push(new Vector(x,y))
+          }
+        }
+      }
 
       qt = new QuadTree(new Vector(0,0),
                canvas.width, canvas.height,
