--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -272,21 +272,27 @@
     }
 
     function setup() {
-      createCanvas(canvas, window.innerWidth, window.innerHeight);
+      createCanvas(canvas, window.outerWidth, window.innerHeight);
+	    
       background(0,0,0)
       ctx.fillStyle = "rgb(255,255,255)"
       ctx.font = "400px sans-serif"
       ctx.textAlign = "center";
-      ctx.fillText("2020", canvas.width/2, canvas.height/2+125)
-      for(let x = 0; x < canvas.width; x++) {
-        for(let y = 0; y < canvas.height; y++) {
-          var c = ctx.getImageData(x,y,1,1).data;
-          var b = brightness(c);
-          if(b > 1) {
-            spots.push(new Vector(x,y))
-          }
-        }
-      }
+      ctx.fillText("2020", canvas.width/2, canvas.height/2+125);
+			if(localStorage.getItem("2020Img") != null)  {
+			  spots = JSON.parse(localStorage.getItem("2020Img"));
+			}else {
+				for(let x = 0; x < canvas.width; x++) {
+					for(let y = 0; y < canvas.height; y++) {
+						var c = ctx.getImageData(x,y,1,1).data;
+						var b = brightness(c);
+						if(b > 1) {
+							spots.push(new Vector(x,y))
+						}
+					}
+				}
+				localStorage.setItem("2020Img",JSON.stringify(spots));
+			}
 
       qt = new QuadTree(new Vector(0,0),
                canvas.width, canvas.height,
