--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <script src="PhysicsEngine.js"></script>
   <!-- <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.min.js"></script> -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
 <style>
   head,body {
 		padding:0;
@@ -276,11 +278,11 @@
 	    
       background(0,0,0)
       ctx.fillStyle = "rgb(255,255,255)"
-      ctx.font = "400px sans-serif"
+      ctx.font = "400px Allura"
       ctx.textAlign = "center";
       ctx.fillText("2020", canvas.width/2, canvas.height/2+125);
-			if(localStorage.getItem("2020Img") != null)  {
-			  spots = JSON.parse(localStorage.getItem("2020Img"));
+			if(localStorage.getItem("AmosImg") != null)  {
+			  spots = JSON.parse(localStorage.getItem("AmosImg"));
 			}else {
 				for(let x = 0; x < canvas.width; x++) {
 					for(let y = 0; y < canvas.height; y++) {
@@ -291,7 +293,7 @@
 						}
 					}
 				}
-				localStorage.setItem("2020Img",JSON.stringify(spots));
+				localStorage.setItem("AmosImg",JSON.stringify(spots));
 			}
 
       qt = new QuadTree(new Vector(0,0),
