--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -211,7 +211,7 @@
 
       show() {
       	if(qt.draw){
-	      	ctx.strokeStyle = "black";
+	      	ctx.strokeStyle = "white";
 	      	ctx.beginPath();
 	      	ctx.rect(this.pos.x,this.pos.y,this.width,this.height);
 	      	ctx.stroke();
