--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -278,7 +278,7 @@
 	    
       background(0,0,0)
       ctx.fillStyle = "rgb(255,255,255)"
-      ctx.font = "350px Allura"
+      ctx.font = "350px Allura,cursive";
       ctx.textAlign = "center";
       ctx.fillText("Amos", canvas.width/2, canvas.height/2+125);
 			stringified = "";
