--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -6,6 +6,7 @@
   <!-- <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.min.js"></script> -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+<title>Circles</title>
 <style>
   head,body {
 		padding:0;
