--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -284,7 +284,23 @@
       ctx.fillText("Amos", canvas.width/2, canvas.height/2+125);
 			stringified = "";
 			if(localStorage.getItem("AmosImg") != null)  {
-			  spots = JSON.parse(localStorage.getItem("AmosImg"));
+			  try {
+			  	spots = JSON.parse(localStorage.getItem("AmosImg"));
+			  }
+			  catch {
+				localStorage.removeItem("AmosImg");
+				for(let x = 0; x < canvas.width; x++) {
+					for(let y = 0; y < canvas.height; y++) {
+						var c = ctx.getImageData(x,y,1,1).data;
+						var b = brightness(c);
+						if(b > 1) {
+							stringified = stringified+new Vector(x,y).stringify(x*y == canvas.width*canvas.height);
+							spots.push(new Vector(x,y))
+						}
+					}
+				}
+				localStorage.setItem("AmosImg",stringified);
+			  }
 			}else {
 				for(let x = 0; x < canvas.width; x++) {
 					for(let y = 0; y < canvas.height; y++) {
