--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -273,6 +273,20 @@
       	  return ((r*299)+(g*587)+(b*114))/1000;
       }
     }
+	  
+    checkImage(canvas,name) {
+		  for(let x = 0; x < canvas.width; x++) {
+				for(let y = 0; y < canvas.height; y++) {
+					var c = ctx.getImageData(x,y,1,1).data;
+					var b = brightness(c);
+					if(b > 1) {
+						stringified = stringified+new Vector(x,y).stringify(x*y == canvas.width*canvas.height);
+						spots.push(new Vector(x,y))
+					}
+				}
+			}
+			localStorage.setItem(name,stringified);
+		}
 
     function setup() {
       createCanvas(canvas, window.outerWidth, window.outerHeight);
@@ -289,30 +303,21 @@
 			  }
 			  catch {
 				localStorage.removeItem("AmosImg");
-				for(let x = 0; x < canvas.width; x++) {
-					for(let y = 0; y < canvas.height; y++) {
-						var c = ctx.getImageData(x,y,1,1).data;
-						var b = brightness(c);
-						if(b > 1) {
-							stringified = stringified+new Vector(x,y).stringify(x*y == canvas.width*canvas.height);
-							spots.push(new Vector(x,y))
-						}
-					}
-				}
-				localStorage.setItem("AmosImg",stringified);
+				checkImage(canvas,"AmosImg");
 			  }
 			}else {
-				for(let x = 0; x < canvas.width; x++) {
-					for(let y = 0; y < canvas.height; y++) {
-						var c = ctx.getImageData(x,y,1,1).data;
-						var b = brightness(c);
-						if(b > 1) {
-							stringified = stringified+new Vector(x,y).stringify(x*y == canvas.width*canvas.height);
-							spots.push(new Vector(x,y))
-						}
-					}
-				}
-				localStorage.setItem("AmosImg",stringified);
+				checkImage(canvas,"AmosImg");
+// 				for(let x = 0; x < canvas.width; x++) {
+// 					for(let y = 0; y < canvas.height; y++) {
+// 						var c = ctx.getImageData(x,y,1,1).data;
+// 						var b = brightness(c);
+// 						if(b > 1) {
+// 							stringified = stringified+new Vector(x,y).stringify(x*y == canvas.width*canvas.height);
+// 							spots.push(new Vector(x,y))
+// 						}
+// 					}
+// 				}
+// 				localStorage.setItem("AmosImg",stringified);
 			}
 
       qt = new QuadTree(new Vector(0,0),
