--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -275,7 +275,7 @@
       }
     }
 	  
-    checkImage(canvas,name) {
+    function checkImage(canvas,name) {
 		  for(let x = 0; x < canvas.width; x++) {
 				for(let y = 0; y < canvas.height; y++) {
 					var c = ctx.getImageData(x,y,1,1).data;
