--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -295,31 +295,20 @@
 	    
       background(0,0,0);
       ctx.fillStyle = "rgb(255,255,255)";
-      ctx.font = "350px Allura,cursive";
+      ctx.font = "350px Times New Roman,serif";
       ctx.textAlign = "center";
-      ctx.fillText("Amos", canvas.width/2, canvas.height/2+125);
+      ctx.fillText("Markers", canvas.width/2, canvas.height/2+125);
 			stringified = "";
-			if(localStorage.getItem("AmosImg") != null)  {
+			if(localStorage.getItem("MarkersImg") != null)  {
 			  try {
-			  	spots = JSON.parse(localStorage.getItem("AmosImg"));
+			  	spots = JSON.parse(localStorage.getItem("MarkersImg"));
 			  }
 			  catch {
-				localStorage.removeItem("AmosImg");
-				checkImage(canvas,"AmosImg");
+				localStorage.removeItem("MarkersImg");
+				checkImage(canvas,"MarkersImg");
 			  }
 			}else {
-				checkImage(canvas,"AmosImg");
-// 				for(let x = 0; x < canvas.width; x++) {
-// 					for(let y = 0; y < canvas.height; y++) {
-// 						var c = ctx.getImageData(x,y,1,1).data;
-// 						var b = brightness(c);
-// 						if(b > 1) {
-// 							stringified = stringified+new Vector(x,y).stringify(x*y == canvas.width*canvas.height);
-// 							spots.push(new Vector(x,y))
-// 						}
-// 					}
-// 				}
-// 				localStorage.setItem("AmosImg",stringified);
+				checkImage(canvas,"MarkersImg");
 			}
 
       qt = new QuadTree(new Vector(0,0),
