--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -297,9 +297,9 @@
       ctx.fillStyle = "rgb(255,255,255)";
       ctx.font = "200px Times New Roman,serif";
       ctx.textAlign = "center";
-      ctx.fillText("Markers", canvas.width/2, canvas.height/2+125);
+      ctx.fillText("Tjung", canvas.width/2, canvas.height/2+125);
 			stringified = "";
-			if(localStorage.getItem("MarkersImg") != null)  {
+			if(localStorage.getItem("TjungImg") != null)  {
 			  try {
 			  	spots = JSON.parse(localStorage.getItem("MarkersImg"));
 			  }
