--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -295,7 +295,7 @@
 	    
       background(0,0,0);
       ctx.fillStyle = "rgb(255,255,255)";
-      ctx.font = "200px Times New Roman,serif";
+      ctx.font = "200px Arial, sans-serif";
       ctx.textAlign = "center";
       ctx.fillText("Tjung", canvas.width/2, canvas.height/2+125);
 			stringified = "";
