--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -287,7 +287,7 @@
 					}
 				}
 			}
-			localStorage.setItem(name,stringified);
+			//localStorage.setItem(name,stringified);
 		}
 
     function setup() {
