--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -47,7 +47,7 @@
         this.pos = new Vector(x,y);
         this.r = r;
         this.growing = true;
-        this.color = "#FFFFFF";//"#D0ADE0";
+        this.color = "#000";//"#D0ADE0";
       }
 
       grow() {
