--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     }
 
     function setup() {
-      createCanvas(canvas, window.outerWidth-225, window.outerHeight-125);
+      createCanvas(canvas, window.outerWidth, window.outerHeight);
       background(0,0,0)
       ctx.fillStyle = "rgb(255,255,255)"
       ctx.font = "400px sans-serif"
